[package]
name = "webelements"
version = "0.1.0"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/pdragt/webelements"
repository = "https://github.com/pdragt/webelements"
documentation = "https://docs.rs/webelements"
readme = "README.md"
keywords = ["web"]
categories = ["gui", "wasm", "web-programming"]
description = "A macro that transforms html to rust code"

[dependencies]
we-derive = { path="../we-derive", version="0.1.1" }
wasm-bindgen = {version="0.2.73", features=["serde-serialize"]}

[dependencies.web-sys]
version = "0.3.50"
features = [
    "console", 
    "Window", 
    "Document", 
    "Node",
    "NodeList",
    "Performance",
    "CssStyleDeclaration", 
    "HtmlElement", 
    "HtmlInputElement", 
    "HtmlButtonElement", 
    "HtmlDivElement", 
    "HtmlSpanElement", 
    "EventTarget", 
    "MouseEvent", 
    "KeyboardEvent", 
    "InputEvent", 
]

[dev-dependencies]
wasm-bindgen-test = "0.3.23"